Address @IngridPuppet comments