@@ -1,7 +1,5 @@
 package com.adorsys.keycloakstatuslist;
 
-import com.adorsys.keycloakstatuslist.client.ApacheHttpStatusListClient;
-import com.adorsys.keycloakstatuslist.client.StatusListHttpClient;
 import com.adorsys.keycloakstatuslist.config.StatusListConfig;
 import com.adorsys.keycloakstatuslist.exception.StatusListException;
 import com.adorsys.keycloakstatuslist.jpa.entity.StatusListMappingEntity;
@@ -9,9 +7,6 @@ import com.adorsys.keycloakstatuslist.jpa.repository.StatusListRepository;
 import com.adorsys.keycloakstatuslist.model.Status;
 import com.adorsys.keycloakstatuslist.model.StatusListClaim;
 import com.adorsys.keycloakstatuslist.model.TokenStatus;
-import com.adorsys.keycloakstatuslist.service.CircuitBreaker;
-import com.adorsys.keycloakstatuslist.service.CryptoIdentityService;
-import com.adorsys.keycloakstatuslist.service.CustomHttpClient;
 import com.adorsys.keycloakstatuslist.service.StatusListService;
 import jakarta.ws.rs.core.UriBuilder;
 import org.apache.commons.collections4.ListUtils;
@@ -27,11 +22,9 @@ import org.keycloak.provider.ProviderConfigProperty;
 import java.io.IOException;
 import java.net.URISyntaxException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.net.URI;
-import java.util.concurrent.ConcurrentHashMap;
 
 import static com.adorsys.keycloakstatuslist.jpa.entity.StatusListMappingEntity.MappingStatus;
 
@@ -46,9 +39,6 @@ public class StatusListProtocolMapper extends OID4VCMapper {
 
     private static final Logger logger = Logger.getLogger(StatusListProtocolMapper.class);
     private static final List<ProviderConfigProperty> CONFIG_PROPERTIES = new ArrayList<>();
-    
-    // Cache StatusListService per realm to share circuit breaker across all token issuance requests
-    private static final Map<String, StatusListService> serviceCache = new ConcurrentHashMap<>();
 
     private final KeycloakSession session;
     private final StatusListService statusListService;
@@ -66,39 +56,7 @@ public class StatusListProtocolMapper extends OID4VCMapper {
     public StatusListProtocolMapper(KeycloakSession session) {
         this.session = session;
         this.statusListRepository = new StatusListRepository(session);
-        CryptoIdentityService cryptoIdentityService = new CryptoIdentityService(session);
-
-        // Get or create cached StatusListService for this realm
-        // This ensures circuit breaker is shared across all token issuance requests
-        String realmId = session.getContext().getRealm().getId();
-        this.statusListService = serviceCache.computeIfAbsent(realmId, key -> {
-            StatusListConfig config = new StatusListConfig(session.getContext().getRealm());
-
-            // Create circuit breaker if enabled
-            CircuitBreaker circuitBreaker = null;
-            if (config.isCircuitBreakerEnabled()) {
-                circuitBreaker = new CircuitBreaker(
-                        "StatusListCircuitBreaker-" + realmId,
-                        config.getCircuitBreakerFailureThreshold(),
-                        config.getCircuitBreakerTimeoutThreshold(),
-                        config.getCircuitBreakerWindowSeconds(),
-                        config.getCircuitBreakerCooldownSeconds()
-                );
-            }
-
-            // Create HTTP client with custom timeouts for issuance path
-            StatusListHttpClient httpClient = new ApacheHttpStatusListClient(
-                    config.getServerUrl(),
-                    cryptoIdentityService.getJwtToken(config),
-                    CustomHttpClient.getHttpClient(
-                            config.getIssuanceConnectTimeout(),
-                            config.getIssuanceReadTimeout()
-                    ),
-                    circuitBreaker
-            );
-
-            return new StatusListService(httpClient);
-        });
+        this.statusListService = StatusListService.create(session);
     }
 
     @Override
@@ -214,7 +172,7 @@ public class StatusListProtocolMapper extends OID4VCMapper {
 
     private boolean isValidHttpUrl(String url) {
         try {
-            java.net.URI uri = new java.net.URI(url);
+            URI uri = new URI(url);
             String scheme = uri.getScheme();
             return scheme != null && (scheme.equalsIgnoreCase("http") || scheme.equalsIgnoreCase("https"));
         } catch (URISyntaxException e) {
@@ -280,10 +238,11 @@ public class StatusListProtocolMapper extends OID4VCMapper {
 
     private void sendStatusToServer(long idx, String statusListId) throws IOException, StatusListException {
         // Prepare payload
-        StatusListService.StatusListPayload.StatusEntry entry =
-                new StatusListService.StatusListPayload.StatusEntry(idx, TokenStatus.VALID.getValue());
         StatusListService.StatusListPayload payload =
-                new StatusListService.StatusListPayload(statusListId, Collections.singletonList(entry));
+                new StatusListService.StatusListPayload(
+                        statusListId,
+                        List.of(new StatusListService.StatusListPayload.StatusEntry(
+                            idx, TokenStatus.VALID.getValue())));
 
         // Publish or update status list on server
         statusListService.publishOrUpdate(payload);
